--- a/furniture/templates/footer.html
+++ b/furniture/templates/footer.html
@@ -143,6 +143,7 @@
 <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
 <script src="{% static 'js/tiny-slider.js' %}"></script>
 <script src="{% static 'js/custom.js' %}"></script>
+<script src="{% static 'js/custom2.js' %}"></script>
 <script>
 document.addEventListener("DOMContentLoaded", function () {
     const form = document.getElementById('trackOrderForm');
